add statstics controller and call api on this controller/ add boostrap

--- a/COVID-19/app/assets/stylesheets/stores.scss
+++ b/COVID-19/app/assets/stylesheets/stores.scss
@@ -1,7 +1,6 @@
-// Place all the styles related to the Hospitals controller here.
+// Place all the styles related to the Stores controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
 
 
 #map {
