--- a/COVID-19/app/views/pages/about.html.erb
+++ b/COVID-19/app/views/pages/about.html.erb
@@ -1,2 +1,28 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1 class="mt-4 mb-4 text-center">Overview</h1>
+
+
+
+
+<h4><%=@question_1 %> </h4>
+<p><%= @answer_1 %> <p>
+
+<h4><%=@question_2 %> </h4>
+<p> <%= @answer_2%> </p>
+
+<h4><%= @question_3 %></h4>
+<p><%= @answer_3 %></p>
+<ul>
+<li> <%= @answer_3_1 %> </li>
+<li> <%= @answer_3_2 %></li>
+<li> <%= @answer_3_3 %> </li>
+</ul>
+<h4><%=@question_4 %> </h4>
+<p><%= @answer_4 %> <p>
+<h4><%=@question_5 %> </h4>
+<p><%= @answer_5 %> <p>
+<h4><%=@question_6 %> </h4>
+<p><%= @answer_6 %> <p>
+
+
+
+   
