--- a/COVID-19/app/views/pages/prevention.html.erb
+++ b/COVID-19/app/views/pages/prevention.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#prevention</h1>
-<p>Find me in app/views/pages/prevention.html.erb</p>
+
+<h1 class="mt-4 mb-4 text-center">Prevention</h1>
+<iframe id="ytplayer" type="text/html"  width="600" height="390" src="https://www.youtube.com/embed/8c_UJwLq8PI" frameborder="0"></iframe>
+
+<iframe id="ytplayer" type="text/html" width="600" height="390" src="https://www.youtube.com/embed/1APwq1df6Mw" frameborder="0"></iframe>
+
+
