--- a/COVID-19/app/views/hospitals/index.html.erb
+++ b/COVID-19/app/views/hospitals/index.html.erb
@@ -1,31 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Hospitals</h1>
+<h1 class="mt-4 mb-4 text-center">Hospitals</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div>
+<% @hospitals.each do |hospital| %>
 
-  <tbody>
-    <% @hospitals.each do |hospital| %>
-      <tr>
-        <td><%= hospital.name %></td>
-        <td><%= hospital.latitude %></td>
-        <td><%= hospital.longitude %></td>
-        <td><%= link_to 'Show', hospital %></td>
-        <td><%= link_to 'Edit', edit_hospital_path(hospital) %></td>
-        <td><%= link_to 'Destroy', hospital, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+<div class="card-group">
+  <div class="card">
+    <img class="card-img-top" src="" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title"><td><%= hospital.name %></td></h5>
+      <td><%= link_to 'Show', hospital %></td>
+      <td><%= link_to 'Edit', edit_hospital_path(hospital) %></td>
+      <td><%= link_to 'Destroy', hospital, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </div>
+  </div>
+
+</div>
+<% end %>
+</div>
 
 <%= link_to 'New Hospital', new_hospital_path %>
