--- a/COVID-19/app/views/stores/show.html.erb
+++ b/COVID-19/app/views/stores/show.html.erb
@@ -2,35 +2,33 @@
   <meta name='turbolinks-visit-control' content='reload'>
   <script>
     document.addEventListener("DOMContentLoaded", function(){
-      initMap(<%=@hospital.latitude%>, <%=@hospital.longitude%>)
+      initMap(<%=@store.latitude%>, <%=@store.longitude%>)
     });
   </script>
 <% end %>
-
 
 <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
-  <%= @hospital.name %>
+  <%= @store.name %>
 </p>
 
 <p>
   <strong>Latitude:</strong>
-  <%= @hospital.latitude %>
+  <%= @store.latitude %>
 </p>
 
 <p>
   <strong>Longitude:</strong>
-  <%= @hospital.longitude %>
+  <%= @store.longitude %>
 </p>
 
-<%= link_to 'Edit', edit_hospital_path(@hospital) %> |
-<%= link_to 'Back', hospitals_path %>
+<%= link_to 'Edit', edit_store_path(@store) %> |
+<%= link_to 'Back', stores_path %>
 
 
 
 <p>
     <div id="map"></div>
 </p>
-
