--- a/COVID-19/app/views/layouts/_nav.html.erb
+++ b/COVID-19/app/views/layouts/_nav.html.erb
@@ -24,17 +24,21 @@
     <%= link_to('Pharmacies & stores', stores_path, class: 'nav-item nav-link active') %>
   </li>
   <% if admin_signed_in? %>
-  <li><%= link_to 'Sign Out', destroy_admin_session_path, method: :delete %></li>
+  <li class="nav-item active">
+  <%= link_to('Sign Out', destroy_admin_session_path, method: :delete,  class:'nav-item nav-link active') %>
+  </li>
   <% else %>
-  <li><%= link_to 'Sign In', new_admin_session_path, method: :get %></li>
+  <li class="nav-item active">
+  <%= link_to 'Sign In', new_admin_session_path, method: :get, class:'nav-item nav-link active' %>
+  </li>
 <% end %>
 <% if admin_signed_in? %>
-  <li>
-  <%= link_to('Edit Profile', edit_admin_registration_path) %>
+  <li class="nav-item active">
+  <%= link_to'Edit Profile', edit_admin_registration_path, class:'nav-item nav-link active' %>
   </li>
 <% else %>
-  <li>
-  <%= link_to('Sign Up', new_admin_registration_path) %>
+  <li <li class="nav-item active">
+  <%= link_to'Sign Up', new_admin_registration_path, class:'nav-item nav-link active' %>
   </li>
 <% end %>
 
