--- a/COVID-19/app/views/statistics/search.html.erb
+++ b/COVID-19/app/views/statistics/search.html.erb
@@ -1,6 +1,6 @@
 <h3>Country Overview</h3>  
 
-    <table class="table table-striped table-light table-borderless table-hover text-center">
+    <table class="table table-striped table-dark table-borderless table-hover text-center">
     <thead class="thead-dark">
     <tr>
       <th>Country</th>
