--- a/COVID-19/app/views/stores/index.html.erb
+++ b/COVID-19/app/views/stores/index.html.erb
@@ -1,31 +1,30 @@
 <p id="notice"><%= notice %></p>
 
+<h1 class="mt-4 mb-4 text-center">Pharmacies & Stores </h1>
 
-<h1 class="mt-4 mb-4 text-center">Pharmacies & stores </h1>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Latitude</th>
-      <th>Longitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @stores.each do |store| %>
-      <tr>
-        <td><%= store.name %></td>
-        <td><%= store.latitude %></td>
-        <td><%= store.longitude %></td>
-        <td><%= link_to 'Show', store %></td>
-        <td><%= link_to 'Edit', edit_store_path(store) %></td>
-        <td><%= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div>
+<% @stores.each do |store| %>
 
-<br>
+  <div class="card-columns">
+  <div class="card">
+    <div class="card-body">
 
+      <h5 class="card-title"><td><%= store.name %></td></h5>
+      <td><%= link_to 'Show', store %></td>
+      <% if admin_signed_in? %>
+      <td><%= link_to 'Edit', edit_store_path(store) %></td>
+      <td><%= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+    </div>
+  </div>
+
+</div>
+
+
+<% end %>
+</div>
+<% if admin_signed_in? %>
 <%= link_to 'New Store', new_store_path %>
+<% end %>
+
