add about model+ set the view about

--- a/COVID-19/app/views/layouts/_nav.html.erb
+++ b/COVID-19/app/views/layouts/_nav.html.erb
@@ -21,7 +21,7 @@
       <%= link_to('Hospitals', hospitals_path, class: 'nav-item nav-link active') %>
     </li>
     <li class="nav-item active">
-    <%= link_to('Pharmacies & stores', stores_path, class: 'nav-item nav-link active') %>
+    <%= link_to('Pharmacies & Stores', stores_path, class: 'nav-item nav-link active') %>
   </li>
   <% if admin_signed_in? %>
   <li class="nav-item active">
