--- a/COVID-19/app/views/pages/home.html.erb
+++ b/COVID-19/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<h1>Pages#home</h1>
-<%=image_tag("/assets/Stop-Covid19-scaled.jpg")%>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<img src="https://occitanie.france-assos-sante.org/wp-content/uploads/sites/18/2020/03/Stop-Covid19-scaled.jpg" width="709" height="449" class="center">
+
