--- a/COVID-19/app/views/pages/about.html.erb
+++ b/COVID-19/app/views/pages/about.html.erb
@@ -3,9 +3,9 @@
 
 <div>
 <% @briefings.each do |briefing| %>
+  <div class="row">
+  <div class="col-lg-12">
 
-  <div class="card-columns">
-  <div class="card">
     <div class="card-body">
 
       <h5 class="card-title"><td><%= briefing.question %></td></h5>
