--- a/COVID-19/app/views/stores/show.html.erb
+++ b/COVID-19/app/views/stores/show.html.erb
@@ -10,7 +10,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
+  <strong>Store Name:</strong>
   <%= @store.name %>
 </p>
 <% if admin_signed_in? %>
@@ -27,6 +27,7 @@
 <p>
     <div id="map"></div>
 </p>
-
-<%= link_to 'Edit', edit_store_path(@store) %> |
 <%= link_to 'Back', stores_path %>
+<% if admin_signed_in? %>
+<%= link_to 'Edit', edit_store_path(@store) %> |
+<% end %>
