done with desgin, the project is ready to go

--- a/COVID-19/app/assets/stylesheets/pages.scss
+++ b/COVID-19/app/assets/stylesheets/pages.scss
@@ -10,3 +10,14 @@
     margin-right: auto;
     width: 50%;
   }
+
+
+  .container_video{
+
+
+    display: flex;
+    justify-content: center;
+
+  
+
+    }
