--- a/COVID-19/app/views/pages/prevention.html.erb
+++ b/COVID-19/app/views/pages/prevention.html.erb
@@ -1,7 +1,9 @@
 
 <h1 class="mt-4 mb-4 text-center">Prevention</h1>
-<iframe id="ytplayer" type="text/html"  width="600" height="390" src="https://www.youtube.com/embed/8c_UJwLq8PI" frameborder="0"></iframe>
 
-<iframe id="ytplayer" type="text/html" width="600" height="390" src="https://www.youtube.com/embed/1APwq1df6Mw" frameborder="0"></iframe>
+
+<iframe  class="embed-responsive-item" id="ytplayer" type="text/html" style="margin:50px 25px" width="600" height="350" src="https://www.youtube.com/embed/8c_UJwLq8PI" frameborder="0"></iframe>
+
+<iframe  class="embed-responsive-item" id="ytplayer" type="text/html" style="margin:50px 0px" width="600" height="350" src="https://www.youtube.com/embed/1APwq1df6Mw" frameborder="0"></iframe>
 
 
