--- a/COVID-19/app/views/statistics/index.html.erb
+++ b/COVID-19/app/views/statistics/index.html.erb
@@ -1,7 +1,8 @@
 <h1 class="mt-4 mb-4 text-center">Statistics</h1>
 
     <nav class="navbar navbar-light bg-light justify-content-between">
-  <a class="navbar-brand"> Search for a country !</a>
+
+  <h3 class="font-weight-bold text-secondary "> Search for a country !</h3>
     <%= form_tag(search_statistic_path, :method => "get",   
     class: 'navbar-form navbar-left') do %>  
   <div class="input-group">  
