--- a/COVID-19/app/views/layouts/_nav.html.erb
+++ b/COVID-19/app/views/layouts/_nav.html.erb
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" mb-4">
   <a class="navbar-brand" href="/">COVID-19</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
